<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <string name="btn1">Layout Exercise</string>
    <string name="btn2">Button Activity</string>
    <string name="btn3">Calculator</string>
    <string name="btn4">Midterm Exam</string>
    <string name="btnfive">Connect3</string>
    <string name="btnsix">Passing Intents</string>
    <string name="btnseven">Fragments</string>
    <string name="btneight">Menu</string>
    <string name="igStory1">Your Story</string>
    <string name="igStory2">Sans</string>
    <string name="igStory3">Papyrus</string>
    <string name="igStory4">Flowey</string>
    <string name="igStory5">Mettaton</string>
    <string name="igStory6">Temmy</string>
    <string name="poster1">moltmalt</string>
    <string name="poster2">sans</string>
    <string name="poster3">temmy</string>
    <string name="caption1">this is me btw if u even care</string>
    <string name="caption2">i miss undertale</string>
    <string name="caption3">temmytemmytemmytemmytemmytemmytemmytemmytemmytemmytemmytemmytemmy</string>
    <string name="textbox">Comment here...</string>
    <string name="hometitle">Main Menu</string>
    <string name="maintitle">Buttons Activity</string>
    <string name="btnclose">Close</string>
    <string name="btntoast">Toast</string>
    <string name="btnchangebg">Change Background</string>
    <string name="btnchangebtn">Change Color</string>
    <string name="btndisappear">Disappear</string>
    <string name="btnreturn">Return</string>
    <string name="btnclear">C</string>
    <string name="btnallclear">AC</string>
    <string name="btnopenp">(</string>
    <string name="btnclosep">)</string>
    <string name="btnmodulo">%</string>
    <string name="btndivide">/</string>
    <string name="btnmultiply">*</string>
    <string name="btnsubtract">-</string>
    <string name="btnadd">+</string>
    <string name="btnequal">=</string>
    <string name="btndot">.</string>
    <string name="btn0">0</string>
    <string name="btn11">1</string>
    <string name="btn22">2</string>
    <string name="btn33">3</string>
    <string name="btn44">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="startButton">Color Match Game</string>
    <string name="restartButton">Restart</string>
    <string name="randomizeButton">Randomize</string>
    <string name="header">Student Registration Form</string>
    <string name="header2">Student Profile</string>
    <string name="nameHeader">Complete Name</string>
    <string name="firstNamePlaceholder">First Name</string>
    <string name="lastNamePlaceHolder">Last Name</string>
    <string name="genderHeader">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="birthDate">Birth Date</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="studentID">Student ID</string>
    <string name="program">Program</string>
    <string name="yrlevel">Year Level</string>
    <string name="gwa">GWA</string>
    <string name="units">Units Taking</string>
    <string name="clearform">Clear</string>
    <string name="submitform">Submit</string>
    <string name="change">Change</string>
    <string name="reset">Reset</string>
    <string name="exit">Exit</string>
    <string name="back">Return</string>
    <string name="hello">Hello World!</string>
    <string name="changeRed">Change Button to Red</string>
    <string name="changeTextRed">Change Text to Black</string>
    <string name="changeSize">Change Angle</string>
    <string name="changeText">Change Text</string>
    <string name="changeVisibility">Change Visibility</string>
</resources>