<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mItemChange"
        android:title="@string/change">
        <menu>
            <item
                android:id="@+id/changeBGRed"
                android:title="@string/changeRed" />
            <item
                android:id="@+id/changeTextRed"
                android:title="@string/changeTextRed" />
            <item
                android:id="@+id/changeRotation"
                android:title="@string/changeSize" />
            <item
                android:id="@+id/changeText"
                android:title="@string/changeText" />
            <item
                android:id="@+id/changeVisibility"
                android:title="@string/changeVisibility" />
        </menu>
    </item>
    <item
        android:id="@+id/mItemReset"
        android:title="@string/reset" />
    <item
        android:id="@+id/mItemExit"
        android:title="@string/exit" />
</menu>