<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/hometitle"
            android:ems="10"
            android:textColor="#070707"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:text="@string/btnfive" />

        <Button
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:text="@string/btnsix" />

        <Button
            android:id="@+id/button7"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:text="@string/btnseven" />

        <Button
            android:id="@+id/button8"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#191717"
            android:text="@string/btneight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>