<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".ButtonActivity">

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:text="@string/maintitle"
        android:textColor="#070707"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnclose"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:backgroundTint="#191717"
        android:text="@string/btnclose"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btntoast"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_weight="0"
        android:backgroundTint="#191717"
        android:text="@string/btntoast"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnchangebtn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_weight="0"
        android:backgroundTint="#191717"
        android:text="@string/btnchangebtn"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnchangebg"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_weight="0"
        android:backgroundTint="#191717"
        android:text="@string/btnchangebg"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btndisappear"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_weight="0"
        android:backgroundTint="#191717"
        android:text="@string/btndisappear"
        android:textSize="20sp" />

</LinearLayout>