<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PassingIntentsExercise">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameHeader"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etxtFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/firstNamePlaceholder"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etxtLName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lastNamePlaceHolder"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/genderHeader"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radGenders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radMale"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radFemale"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radOthers"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/others" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStudID"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/studentID"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtStudID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvProgram"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/program"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtProgram"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvYrLevel"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yrlevel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtYrLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/birthDate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phoneNumber"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtEmail"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUnits"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtUnits"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvGWA"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gwa"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etxtGWA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnClearForm"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clearform" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSubmitForm"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submitform" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>